--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500&display=swap');
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   margin: 0;
+  overscroll-behavior: none;
   font-family: 'Montserrat', sans-serif, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
